--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/translate": "^8.0.2",
     "@vespaiach/axios-fetch-adapter": "^0.3.0",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
+    "from": "^0.1.7",
     "google-translate-open-api": "^1.3.7",
+    "import": "^0.0.6",
     "jquery": "^3.6.0",
     "ky": "^0.31.1",
     "md5": "^2.3.0",
     "react": "^18.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
+    "translate": "^2.0.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
